Some fixes and testing
Added display:inline-block to properly testing width.
Trying to add dummy element to preserve original transition on original
event.
Added height to transition properties.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,3 @@
 
     .container { background: #a33; resize: both; }
-    .editor { background: #045; color:#fff; opacity: 0.6; }
+    .editor { background: #045; color:#fff; opacity: 0.6; display: inline-block }
